--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Poppins', sans-serif;
+}
+
+.fit {
+  flex: 1;
+  text-align: justify;
+}
+
+.grey {
+  color: gray;
+}
+
+.sly {
+  height: calc(100vh - 80px);
+}
+
+.tran {
+  transition: all 2s ease;
+}
+
+.first::first-letter {
+  color: #a52a2a;
+  font-size: 44px;
+  text-transform: uppercase;
+}
+
+.cap::first-letter {
+  text-transform: uppercase;
+}
+
+.overlay{
+  position: absolute;
+  transition: .2s ease;
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.joe:hover .overlay {
+  opacity: 1;
+}
+
+.feye2{
+  flex: 2;
+}
+
+.catalo{
+  flex: 3;
+}
+
+label {
+  margin-left: 10px;
+}
+
+.flowkey{
+  flex: 5;
+}
+
+.jora:hover img {
+  transform: scale(1.1);
 }
